@@ -1,6 +1,7 @@
 Revision history for Dist-Build
 
 {{$NEXT}}
+          - Don't generate manpages on systems not supporting man paths
 
 0.020     2025-05-01 14:52:59+02:00 Europe/Brussels
           - No longer install script/ by default
